--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <pre>
-3 Days of Python (Roadmap)
-Bus Fare Challenge – Task One (Day 1)
+<h1> 3 Days of Python (Roadmap)</h1>
+<h3> Bus Fare Challenge – Task One (Day 1)</h3>
 Write a program that does the following:
 1. Gets today's date and stores it in a variable 'date'
 2. Uses today's date to get the name on the day of the week written in short form with the
